eks-decoupled/apps/retail-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-backend-api
  namespace: retail-store
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/cors.allow-origin: "*"
    alb.ingress.kubernetes.io/cors.allow-methods: "GET,POST,PUT,DELETE,OPTIONS"
    alb.ingress.kubernetes.io/cors.allow-headers: "Content-Type,Authorization,X-Requested-With"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              number: 80
      - path: /carts
        pathType: Prefix
        backend:
          service:
            name: carts
            port:
              number: 80
      - path: /checkout
        pathType: Prefix
        backend:
          service:
            name: checkout
            port:
              number: 80
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 80
